fixed cabal file

--- a/relational-algebra.cabal
+++ b/relational-algebra.cabal
@@ -13,6 +13,9 @@ library
                        Select.Relation
                        Select.Expression
   build-depends:       base >= 4.7 && < 5
+                     , bytestring
+                     , vector
+                     , cassava
   default-language:    Haskell2010
 
 test-suite relational-algebra-test
