--- a/relational-algebra.cabal
+++ b/relational-algebra.cabal
@@ -10,6 +10,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Table
+                       TableOps
                        Interpreter
                        Select
                        Select.Relation
