--- a/relational-algebra.cabal
+++ b/relational-algebra.cabal
@@ -17,11 +17,12 @@ library
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , vector
-                     , cassava
                      , text
                      , mtl
                      , containers
                      , transformers
+                     , csv
+                     , csv-table
   default-language:    Haskell2010
 
 test-suite relational-algebra-test
